# aios-workspace

./: .c8rc.json  .coderabbit.yaml  .dockerignore  .env.example  .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASE-CHECKLIST.md  RESOLVER.md  SECURITY.md  code-review-2026-07-13.md  coverage-baseline.json  eslint.config.mjs  opencode.json  package-lock.json  package.json  tsconfig.json
.claude/: resolver-fixtures.yaml  settings.json
.codex/: hooks.json
.cursor/: hooks.json
.githooks/: pre-push
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.opencode/: opencode.json
2-work/: aios-product-assessment-and-roadmap.md  fugu-session-handoff-2026-06-23.md
docs/: ENGINEERING-CONSTITUTION.md  GETTING-STARTED.md  GUIDE.md  agent-build.md  agent-relay.md  architecture.md  brain-api.md  byoa.md  council-models.example.yaml  design-self-update.md  design-system.md  desktop-app.md  feature-set.md  hermes-runbook.md  integrations.md  loop-install.md  loop-models.example.yaml  phase3-skills-library.md  plan-agentic-ux-testing.md  plan-cockpit-docs-release.md  plan-onboarding-enrichment.md  plan-skills-untrusted-install.md  prd-council-harness.md  prd-executor-mcp-gateway.md  prd-generative-education.md  prd-opencode-client-surface.md  prd-team-brain-mcp-connector.md  prd-unified-agent-inbox.md  prd-verified-weekly-operator-loop.md  (+6 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
(+1108 files in other folders)
