[package]
name = "aios-workspace"
version = "0.1.0"
description = "AIOS Workspace — your local agent cockpit"
authors = ["AIOS Workspace contributors"]
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde_json = "1"
rfd = "0.15"
rand = "0.8"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
